# HCOM

./: CHANGELOG.md  HCOM.cabal  LICENSE  README.txt  stack.yaml
Testing/: ISATest.hs  MarshallingSpec.hs  README.txt  SAtest.sln  SafeArraySpec.hs  Test.hs  TestHCOMSafeArrays.hs
Testing/SAtest/: CSATest.cpp  CSATest.h  ReadMe.txt  SATest1.rgs  SAtest.aps  SAtest.cpp  SAtest.def  SAtest.h  SAtest.idl  SAtest.rc  SAtest.rgs  SAtest.vcproj  SAtestPS.vcproj  SAtest_i.c  SAtest_p.c  SAtestps.def  dlldata.c  resource.h  stdafx.cpp
src/System/Win32/: HCOM.hs
src/System/Win32/HCOM/: BSTR.hs  COMCall.hs  COMPtr.hs  ErrorBase.hs  ErrorUtils.hs  ErrorUtils.hs-boot  Extras.hs  Flatten.hs  Functions.hs  GUID.hs  RawFunctions.hs  SafeArray.hs  Stack.hs  Tags.hs  Thunk.s  Variant.hs  VariantConversion.hs
