name: HCOM
version: 0.2.1
cabal-version: >= 1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright:
maintainer:
stability:
homepage:
package-url:
bug-reports:
synopsis: An interface to COM
description: .
             .
category:
author:
tested-with:

Library
    exposed-modules: System.Win32.HCOM
                     System.Win32.HCOM.Gen.IDictionary
    exposed: True
    buildable: True
    build-depends: base >4, mtl >1, time >1, bytestring >0.9, ghc-prim
    pkgconfig-depends:
    if os(windows)
        extra-libraries: ole32 oleaut32
    hs-source-dirs: src
    other-modules: System.Win32.HCOM.BSTR
                   System.Win32.HCOM.COMCall
                   System.Win32.HCOM.COMPtr
                   System.Win32.HCOM.ErrorBase
                   System.Win32.HCOM.ErrorUtils
                   System.Win32.HCOM.Flatten
                   System.Win32.HCOM.Functions
                   System.Win32.HCOM.GUID
                   System.Win32.HCOM.RawFunctions
                   System.Win32.HCOM.Stack
                   System.Win32.HCOM.Variant
                   System.Win32.HCOM.VariantConversion
                   System.Win32.HCOM.SafeArray
                   System.Win32.HCOM.Tags
                   System.Win32.HCOM.Extras
    ghc-options: -Wall -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-type-defaults -fno-warn-unused-do-bind

Test-suite SATest
    type:       exitcode-stdio-1.0
    main-is:    TestHCOMSafeArrays.hs
    ghc-options:         -main-is TestHCOMSafeArrays
    build-depends: base, bytestring, HCOM, time
    hs-source-dirs:      Testing
    other-modules: ISATest
